Fix branding settings scrollbar

--- a/src/scss/sections/template-editor-layout.scss
+++ b/src/scss/sections/template-editor-layout.scss
@@ -264,6 +264,9 @@ $madero-light-blue: #107DDA;
     height: var(--attribute-list-height);
     overflow-x: hidden;
     overflow-y: auto;
+  }
+
+  & .attribute-list-container {
     padding-left: 20px;
     padding-right: 20px;
   }
